fix the description width

--- a/src/app/pages/tax-management.component/taxForm.component/taxForm.component.html
+++ b/src/app/pages/tax-management.component/taxForm.component/taxForm.component.html
@@ -15,7 +15,7 @@
         <input matInput formControlName="taxCode" />
       </mat-form-field>
 
-      <mat-form-field class="lg:col-span-2 w-full max-w-[640px]">
+      <mat-form-field class="w-80">
         <mat-label>Description</mat-label>
         <textarea matInput formControlName="description"></textarea>
       </mat-form-field>
