--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -35,6 +35,17 @@
         </li>
         <li>
           <a
+            [routerLink]="['/custom']"
+            routerLinkActive="bg-indigo-100 text-indigo-700 "
+            class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600"
+          >
+            <mat-icon class="text-indigo-400 group-hover:text-indigo-600"
+              >account_balance</mat-icon
+            >Custom
+          </a>
+        </li>
+        <li>
+          <a
             [routerLink]="['/user-mang']"
             routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
             class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600"
@@ -43,18 +54,6 @@
               >groups</mat-icon
             >
             User Management
-          </a>
-        </li>
-          <li>
-          <a
-            [routerLink]="['/tax-mangenmet']"
-            routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
-            class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600"
-          >
-            <mat-icon class="text-indigo-400 group-hover:text-indigo-600"
-              >receipt_long</mat-icon
-            >
-            Tax Management
           </a>
         </li>
         <li>
@@ -78,6 +77,18 @@
             <mat-icon class="text-indigo-400 group-hover:text-indigo-600"
               >currency_exchange</mat-icon
             >Exchange Rates
+          </a>
+        </li>
+        <li>
+          <a
+            [routerLink]="['/tax-mangenmet']"
+            routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
+            class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600"
+          >
+            <mat-icon class="text-indigo-400 group-hover:text-indigo-600"
+              >receipt_long</mat-icon
+            >
+            Tax Management
           </a>
         </li>
       </ul>
