--- a/src/app/pages/tax-management/taxes-detail/taxes-detail.html
+++ b/src/app/pages/tax-management/taxes-detail/taxes-detail.html
@@ -13,6 +13,12 @@
     </button>
   </div>
 
-  <ag-grid-angular class="ag-theme-alpine" style="width: 100%; height: 90vh" [rowData]="taxes" [columnDefs]="colDefs"
-    [gridOptions]="gridOptions" [theme]="'legacy'"></ag-grid-angular>
+  <ag-grid-angular
+    class="ag-theme-alpine"
+    style="width: 100%; height: 90vh"
+    [rowData]="taxes"
+    [columnDefs]="colDefs"
+    [gridOptions]="gridOptions"
+    [theme]="'legacy'"
+  ></ag-grid-angular>
 </div>
